# customer-support-agent

./: .gitignore  CLAUDE.md  README.md  STATUS_REPORT.md  pyrightconfig.json  test_results.txt
.claude/: settings.json
.claude/agents/: mcp-tool-specialist.md  security-reviewer.md  test-writer.md
.claude/commands/: add-tool.md  context-dump.md  run-scenario.md  verify-enforcement.md
.claude/skills/: mcp-tool-description-guide.md
backend/: .env.example  pyproject.toml
backend/agent/: orchestrator.py  session.py
backend/api/: main.py  schemas.py
backend/api/routes/: chat.py
backend/backends/: crm.py  orders.py  payments.py  tickets.py
backend/customer_support_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/mcp/: server.py  session_storage.py
backend/mcp/middleware/: __init__.py  prerequisites.py
backend/mcp/tools/: __init__.py  escalate_to_human.py  get_customer.py  lookup_order.py  process_refund.py
backend/mcp_layer/: __init__.py  mcp_server.py
backend/mcp_layer/middleware/: idempotency.py
backend/mcp_layer/tools/: __init__.py  escalate_to_human.py  get_customer.py  lookup_order.py  process_refund.py
backend/prompts/: few_shot_examples.py  system_prompt.py
backend/tests/evals/: fcr_benchmark.py  latest_benchmark.json
backend/tests/integration/: conftest.py  test_cross_account.py  test_escalation.py  test_refund_flow.py
backend/tests/unit/: __init__.py  test_error_handlers.py  test_idempotency.py  test_prerequisites.py
backend/types/: models.py
